# michaelgorman.tech

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: auth.py  experiences.py  markdown.py  messages.py  projects.py  resume_requests.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: experience.py  message.py  project.py  resume_request.py  user.py
backend/app/schemas/: experience.py  message.py  project.py  resume_request.py  user.py
backend/app/services/: markdown_service.py
frontend/: package-lock.json  package.json
