[tool.poetry]
name = "michaelgorman.tech"
version = "0.1.0"
description = ""
authors = ["Michael Gorman <gorman.270@osu.edu>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
